--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.11.3",
     "jquery": "^3.7.1",
     "popper.js": "^1.16.1",
     "queue-microtask": "^1.2.3",
